k8s/base/streaming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streaming
spec:
  template:
    metadata:
      labels:
        deployment: streaming
    spec:
      containers:
      - name: streaming
        image: tootsuite/mastodon:edge
        command: ["yarn", "start"]
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            port: 4000
            path: /api/v1/streaming/health
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 4000
            path: /api/v1/streaming/health
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: streaming
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "streaming-backend-config"}'
spec:
  selector:
    deployment: streaming
  type: NodePort
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
  sessionAffinity: ClientIP
