k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  template:
    metadata:
      labels:
        deployment: web
    spec:
      containers:
      - name: web
        image: tootsuite/mastodon@sha256:1d342a9127ceb3b17b50c0f30f4c22bf624a24b9f683e195df9eb162f7e4f145
        resources:
          requests:
            cpu: 15m
            memory: 512Mi
        command: ["sh", "-c",
                  "echo 'persistent_timeout 620' >> config/puma.rb && echo UmFpbHMuYXBwbGljYXRpb24uY29uZmlnLnB1YmxpY19maWxlX3NlcnZlci5oZWFkZXJzID0geyAnQ2FjaGUtQ29udHJvbCcgPT4gJ21heC1hZ2U9Mjg4MCwgcHVibGljJyB9 | base64 -d >> config/initializers/assets.rb && bundle exec rails s -p 3000"]
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            port: 3000
            path: /robots.txt
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            port: 3000
            path: /robots.txt
          initialDelaySeconds: 5
          periodSeconds: 5
      - name: cloudsql
        image: gcr.io/cloudsql-docker/gce-proxy:1.14
        command: ["/cloud_sql_proxy",
                  "-instances=ykzts-technology:asia-northeast1:ykzts-technology=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        ports:
        - containerPort: 5432
        securityContext:
          runAsUser: 2
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: web
  annotations:
    beta.cloud.google.com/backend-config:
      '{"default": "web-backend-config"}'
spec:
  selector:
    deployment: web
  type: NodePort
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
