k8s/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mastodon
  annotations:
    ingress.gcp.kubernetes.io/pre-shared-cert: ykzts-technology-cert
spec:
  rules:
  - host: ykzts.technology
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 3000
      - path: /api/v1/streaming/*
        backend:
          serviceName: streaming
          servicePort: 4000
